RTC6/RTC6 Files/Linux/debian-bullseye/usr/share/scanlab/examples/1/scanlab/rtc6.h

    typedef int32_t LONG;     //  LONG  is assumed to be 4 Bytes
    typedef uint32_t UINT;     //  UINT  is assumed to be 4 Bytes
    typedef uintptr_t ULONG_PTR;
RTC6_API UINT __stdcall n_get_auto_cal(const UINT CardNo, const UINT HeadNo);
RTC6_API UINT __stdcall n_write_hi_pos(const UINT CardNo, const UINT HeadNo, const LONG X1, const LONG X2, const LONG Y1, const LONG Y2);
RTC6_API void __stdcall n_set_timelag_compensation(const UINT CardNo, const UINT HeadNo, const UINT TimeLagXY, const UINT TimeLagZ);
RTC6_API void __stdcall n_set_sky_writing(const UINT CardNo, const double Timelag, const LONG LaserOnShift);
RTC6_API void __stdcall n_get_hi_data(const UINT CardNo, LONG* X1, LONG* X2, LONG* Y1, LONG* Y2);
RTC6_API void __stdcall set_delay_mode(const UINT VarPoly, const UINT DirectMove3D, const UINT EdgeLevel, const UINT MinJumpDelay, const UINT JumpLengthLimit);
RTC6_API void __stdcall set_jump_speed_ctrl(const double Speed);
RTC6_API void __stdcall set_mark_speed_ctrl(const double Speed);
RTC6_API void __stdcall set_sky_writing_para(const double Timelag, const LONG LaserOnShift, const UINT Nprev, const UINT Npost);
RTC6_API void __stdcall set_sky_writing_limit(const double CosAngle);
RTC6_API void __stdcall set_sky_writing_mode(const UINT Mode);
RTC6_API LONG __stdcall load_varpolydelay(const char* Name, const UINT No);
RTC6_API void __stdcall set_hi(const UINT HeadNo, const double GalvoGainX, const double GalvoGainY, const LONG GalvoOffsetX, const LONG GalvoOffsetY);
RTC6_API void __stdcall get_hi_pos(const UINT HeadNo, LONG* X1, LONG* X2, LONG* Y1, LONG* Y2);
RTC6_API UINT __stdcall auto_cal(const UINT HeadNo, const UINT Command);
RTC6_API UINT __stdcall get_auto_cal(const UINT HeadNo);
RTC6_API UINT __stdcall write_hi_pos(const UINT HeadNo, const LONG X1, const LONG X2, const LONG Y1, const LONG Y2);
RTC6_API void __stdcall set_timelag_compensation(const UINT HeadNo, const UINT TimeLagXY, const UINT TimeLagZ);
RTC6_API void __stdcall set_sky_writing(const double Timelag, const LONG LaserOnShift);
RTC6_API void __stdcall get_hi_data(LONG* X1, LONG* X2, LONG* Y1, LONG* Y2);
RTC6_API void __stdcall n_send_user_data(const UINT CardNo, const UINT Head, const UINT Axis, const LONG Data0, const LONG Data1, const LONG Data2, const LONG Data3, const LONG Data4);
RTC6_API LONG __stdcall n_read_user_data(const UINT CardNo, const UINT Head, const UINT Axis, LONG* Data0, LONG* Data1, LONG* Data2, LONG* Data3, LONG* Data4);
RTC6_API void __stdcall n_control_command(const UINT CardNo, const UINT Head, const UINT Axis, const UINT Data);
RTC6_API LONG __stdcall n_get_value(const UINT CardNo, const UINT Signal);
RTC6_API void __stdcall n_get_values(const UINT CardNo, const ULONG_PTR SignalPtr, const ULONG_PTR ResultPtr);
RTC6_API void __stdcall n_get_galvo_controls(const UINT CardNo, const ULONG_PTR SignalPtr, const ULONG_PTR ResultPtr);
RTC6_API UINT __stdcall n_get_head_status(const UINT CardNo, const UINT Head);
RTC6_API LONG __stdcall n_set_jump_mode(const UINT CardNo, const LONG Flag, const UINT Length, const LONG VA1, const LONG VA2, const LONG VB1, const LONG VB2, const LONG JA1, const LONG JA2, const LONG JB1, const LONG JB2);
RTC6_API LONG __stdcall n_load_jump_table_offset(const UINT CardNo, const char* Name, const UINT No, const UINT PosAck, const LONG Offset, const UINT MinDelay, const UINT MaxDelay, const UINT ListPos);
RTC6_API UINT __stdcall n_get_jump_table(const UINT CardNo, const ULONG_PTR Ptr);
RTC6_API UINT __stdcall n_set_jump_table(const UINT CardNo, const ULONG_PTR Ptr);
RTC6_API LONG __stdcall n_load_jump_table(const UINT CardNo, const char* Name, const UINT No, const UINT PosAck, const UINT MinDelay, const UINT MaxDelay, const UINT ListPos);
RTC6_API void __stdcall send_user_data(const UINT Head, const UINT Axis, const LONG Data0, const LONG Data1, const LONG Data2, const LONG Data3, const LONG Data4);
RTC6_API LONG __stdcall read_user_data(const UINT Head, const UINT Axis, LONG* Data0, LONG* Data1, LONG* Data2, LONG* Data3, LONG* Data4);
RTC6_API void __stdcall control_command(const UINT Head, const UINT Axis, const UINT Data);
RTC6_API LONG __stdcall get_value(const UINT Signal);
RTC6_API void __stdcall get_values(const ULONG_PTR SignalPtr, const ULONG_PTR ResultPtr);
RTC6_API void __stdcall get_galvo_controls(const ULONG_PTR SignalPtr, const ULONG_PTR ResultPtr);
RTC6_API UINT __stdcall get_head_status(const UINT Head);
RTC6_API LONG __stdcall set_jump_mode(const LONG Flag, const UINT Length, const LONG VA1, const LONG VA2, const LONG VB1, const LONG VB2, const LONG JA1, const LONG JA2, const LONG JB1, const LONG JB2);
RTC6_API LONG __stdcall load_jump_table_offset(const char* Name, const UINT No, const UINT PosAck, const LONG Offset, const UINT MinDelay, const UINT MaxDelay, const UINT ListPos);
RTC6_API UINT __stdcall get_jump_table(const ULONG_PTR Ptr);
RTC6_API UINT __stdcall set_jump_table(const ULONG_PTR Ptr);
RTC6_API LONG __stdcall load_jump_table(const char* Name, const UINT No, const UINT PosAck, const UINT MinDelay, const UINT MaxDelay, const UINT ListPos);
RTC6_API UINT __stdcall n_get_scanahead_params(const UINT CardNo, const UINT HeadNo, UINT* PreViewTime, UINT* Vmax, double* Amax);
RTC6_API LONG __stdcall n_activate_scanahead_autodelays(const UINT CardNo, const LONG Mode);
RTC6_API void __stdcall n_set_scanahead_laser_shifts(const UINT CardNo, const LONG dLasOn, const LONG dLasOff);
RTC6_API void __stdcall n_set_scanahead_line_params(const UINT CardNo, const UINT CornerScale, const UINT EndScale, const UINT AccScale);
RTC6_API void __stdcall n_set_scanahead_line_params_ex(const UINT CardNo, const UINT CornerScale, const UINT EndScale, const UINT AccScale, const UINT JumpScale);
RTC6_API UINT __stdcall n_set_scanahead_params(const UINT CardNo, const UINT Mode, const UINT HeadNo, const UINT TableNo, const UINT PreViewTime, const UINT Vmax, const double Amax);
RTC6_API void __stdcall n_set_scanahead_speed_control(const UINT CardNo, const UINT Mode);
RTC6_API UINT __stdcall get_scanahead_params(const UINT HeadNo, UINT* PreViewTime, UINT* Vmax, double* Amax);
RTC6_API LONG __stdcall activate_scanahead_autodelays(const LONG Mode);
RTC6_API void __stdcall set_scanahead_laser_shifts(const LONG dLasOn, const LONG dLasOff);
RTC6_API void __stdcall set_scanahead_line_params(const UINT CornerScale, const UINT EndScale, const UINT AccScale);
RTC6_API void __stdcall set_scanahead_line_params_ex(const UINT CornerScale, const UINT EndScale, const UINT AccScale, const UINT JumpScale);
RTC6_API UINT __stdcall set_scanahead_params(const UINT Mode, const UINT HeadNo, const UINT TableNo, const UINT PreViewTime, const UINT Vmax, const double Amax);
RTC6_API void __stdcall set_scanahead_speed_control(const UINT Mode);
RTC6_API void __stdcall n_stepper_init(const UINT CardNo, const UINT No, const UINT Period, const LONG Dir, const LONG Pos, const UINT Tol, const UINT Enable, const UINT WaitTime);
RTC6_API void __stdcall n_stepper_enable(const UINT CardNo, const LONG Enable1, const LONG Enable2);
RTC6_API void __stdcall n_stepper_disable_switch(const UINT CardNo, const LONG Disable1, const LONG Disable2);
RTC6_API void __stdcall n_stepper_control(const UINT CardNo, const LONG Period1, const LONG Period2);
RTC6_API void __stdcall n_stepper_abs_no(const UINT CardNo, const UINT No, const LONG Pos, const UINT WaitTime);
RTC6_API void __stdcall n_stepper_rel_no(const UINT CardNo, const UINT No, const LONG dPos, const UINT WaitTime);
RTC6_API void __stdcall n_stepper_abs(const UINT CardNo, const LONG Pos1, const LONG Pos2, const UINT WaitTime);
RTC6_API void __stdcall n_stepper_rel(const UINT CardNo, const LONG dPos1, const LONG dPos2, const UINT WaitTime);
RTC6_API void __stdcall n_get_stepper_status(const UINT CardNo, UINT* Status1, LONG* Pos1, UINT* Status2, LONG* Pos2);
RTC6_API void __stdcall stepper_init(const UINT No, const UINT Period, const LONG Dir, const LONG Pos, const UINT Tol, const UINT Enable, const UINT WaitTime);
RTC6_API void __stdcall stepper_enable(const LONG Enable1, const LONG Enable2);
RTC6_API void __stdcall stepper_disable_switch(const LONG Disable1, const LONG Disable2);
RTC6_API void __stdcall stepper_control(const LONG Period1, const LONG Period2);
RTC6_API void __stdcall stepper_abs_no(const UINT No, const LONG Pos, const UINT WaitTime);
RTC6_API void __stdcall stepper_rel_no(const UINT No, const LONG dPos, const UINT WaitTime);
RTC6_API void __stdcall stepper_abs(const LONG Pos1, const LONG Pos2, const UINT WaitTime);
RTC6_API void __stdcall stepper_rel(const LONG dPos1, const LONG dPos2, const UINT WaitTime);
RTC6_API void __stdcall get_stepper_status(UINT* Status1, LONG* Pos1, UINT* Status2, LONG* Pos2);
RTC6_API void __stdcall n_select_cor_table_list(const UINT CardNo, const UINT HeadA, const UINT HeadB);
RTC6_API void __stdcall select_cor_table_list(const UINT HeadA, const UINT HeadB);
RTC6_API void __stdcall n_list_nop(const UINT CardNo);
RTC6_API void __stdcall n_list_continue(const UINT CardNo);
RTC6_API void __stdcall n_list_next(const UINT CardNo);
RTC6_API void __stdcall n_long_delay(const UINT CardNo, const UINT Delay);
RTC6_API void __stdcall n_set_end_of_list(const UINT CardNo);
RTC6_API void __stdcall n_set_wait(const UINT CardNo, const UINT WaitWord);
RTC6_API void __stdcall n_list_jump_pos(const UINT CardNo, const UINT Pos);
RTC6_API void __stdcall n_list_jump_rel(const UINT CardNo, const LONG Pos);
RTC6_API void __stdcall n_list_repeat(const UINT CardNo);
RTC6_API void __stdcall n_list_until(const UINT CardNo, const UINT Number);
RTC6_API void __stdcall n_range_checking(const UINT CardNo, const UINT HeadNo, const UINT Mode, const UINT Data);
RTC6_API void __stdcall n_store_timestamp_counter_list(const UINT CardNo);
RTC6_API void __stdcall n_wait_for_timestamp_counter(const UINT CardNo, const UINT TimeStampCounter);
RTC6_API void __stdcall n_wait_for_timestamp_counter_mode(const UINT CardNo, const UINT TimeStampCounter, const UINT Mode);
RTC6_API void __stdcall n_set_list_jump(const UINT CardNo, const UINT Pos);
RTC6_API void __stdcall n_wait_for_timestamp_counter_long(const UINT CardNo, const UINT WaitCounterL, const UINT WaitCounterH, const UINT MaxWaitTime, const UINT Mode);
RTC6_API void __stdcall list_nop(void);
RTC6_API void __stdcall list_continue(void);
RTC6_API void __stdcall list_next(void);
RTC6_API void __stdcall long_delay(const UINT Delay);
RTC6_API void __stdcall set_end_of_list(void);
RTC6_API void __stdcall set_wait(const UINT WaitWord);
RTC6_API void __stdcall list_jump_pos(const UINT Pos);
RTC6_API void __stdcall list_jump_rel(const LONG Pos);
RTC6_API void __stdcall list_repeat(void);