RTC6/RTC6 Files/Windows/RTC6Import.pas

function  n_get_auto_cal(CardNo: LongWord; HeadNo: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_write_hi_pos(CardNo: LongWord; HeadNo: LongWord; X1: LongInt; X2: LongInt; Y1: LongInt; Y2: LongInt): LongWord; stdcall; external RTC6DLL;
procedure n_set_timelag_compensation(CardNo: LongWord; HeadNo: LongWord; TimeLagXY: LongWord; TimeLagZ: LongWord); stdcall; external RTC6DLL;
procedure n_set_sky_writing(CardNo: LongWord; Timelag: Double; LaserOnShift: LongInt); stdcall; external RTC6DLL;
procedure n_get_hi_data(CardNo: LongWord; var X1: LongInt; var X2: LongInt; var Y1: LongInt; var Y2: LongInt); stdcall; external RTC6DLL;
procedure set_delay_mode(VarPoly: LongWord; DirectMove3D: LongWord; EdgeLevel: LongWord; MinJumpDelay: LongWord; JumpLengthLimit: LongWord); stdcall; external RTC6DLL;
procedure set_jump_speed_ctrl(Speed: Double); stdcall; external RTC6DLL;
procedure set_mark_speed_ctrl(Speed: Double); stdcall; external RTC6DLL;
procedure set_sky_writing_para(Timelag: Double; LaserOnShift: LongInt; Nprev: LongWord; Npost: LongWord); stdcall; external RTC6DLL;
procedure set_sky_writing_limit(CosAngle: Double); stdcall; external RTC6DLL;
procedure set_sky_writing_mode(Mode: LongWord); stdcall; external RTC6DLL;
function  load_varpolydelay(Name: PChar; No: LongWord): LongInt; stdcall; external RTC6DLL;
procedure set_hi(HeadNo: LongWord; GalvoGainX: Double; GalvoGainY: Double; GalvoOffsetX: LongInt; GalvoOffsetY: LongInt); stdcall; external RTC6DLL;
procedure get_hi_pos(HeadNo: LongWord; var X1: LongInt; var X2: LongInt; var Y1: LongInt; var Y2: LongInt); stdcall; external RTC6DLL;
function  auto_cal(HeadNo: LongWord; Command: LongWord): LongWord; stdcall; external RTC6DLL;
function  get_auto_cal(HeadNo: LongWord): LongWord; stdcall; external RTC6DLL;
function  write_hi_pos(HeadNo: LongWord; X1: LongInt; X2: LongInt; Y1: LongInt; Y2: LongInt): LongWord; stdcall; external RTC6DLL;
procedure set_timelag_compensation(HeadNo: LongWord; TimeLagXY: LongWord; TimeLagZ: LongWord); stdcall; external RTC6DLL;
procedure set_sky_writing(Timelag: Double; LaserOnShift: LongInt); stdcall; external RTC6DLL;
procedure get_hi_data(var X1: LongInt; var X2: LongInt; var Y1: LongInt; var Y2: LongInt); stdcall; external RTC6DLL;
procedure n_send_user_data(CardNo: LongWord; Head: LongWord; Axis: LongWord; Data0: LongInt; Data1: LongInt; Data2: LongInt; Data3: LongInt; Data4: LongInt); stdcall; external RTC6DLL;
function  n_read_user_data(CardNo: LongWord; Head: LongWord; Axis: LongWord; var Data0: LongInt; var Data1: LongInt; var Data2: LongInt; var Data3: LongInt; var Data4: LongInt): LongInt; stdcall; external RTC6DLL;
procedure n_control_command(CardNo: LongWord; Head: LongWord; Axis: LongWord; Data: LongWord); stdcall; external RTC6DLL;
function  n_get_value(CardNo: LongWord; Signal: LongWord): LongInt; stdcall; external RTC6DLL;
procedure n_get_values(CardNo: LongWord; SignalPtr: PLongWord; ResultPtr: PLongInt); stdcall; external RTC6DLL;
procedure n_get_galvo_controls(CardNo: LongWord; SignalPtr: PLongInt; ResultPtr: PLongInt); stdcall; external RTC6DLL;
function  n_get_head_status(CardNo: LongWord; Head: LongWord): LongWord; stdcall; external RTC6DLL;
function  n_set_jump_mode(CardNo: LongWord; Flag: LongInt; Length: LongWord; VA1: LongInt; VA2: LongInt; VB1: LongInt; VB2: LongInt; JA1: LongInt; JA2: LongInt; JB1: LongInt; JB2: LongInt): LongInt; stdcall; external RTC6DLL;
function  n_load_jump_table_offset(CardNo: LongWord; Name: PChar; No: LongWord; PosAck: LongWord; Offset: LongInt; MinDelay: LongWord; MaxDelay: LongWord; ListPos: LongWord): LongInt; stdcall; external RTC6DLL;
function  n_get_jump_table(CardNo: LongWord; Ptr: PWord): LongWord; stdcall; external RTC6DLL;
function  n_set_jump_table(CardNo: LongWord; Ptr: PWord): LongWord; stdcall; external RTC6DLL;
function  n_load_jump_table(CardNo: LongWord; Name: PChar; No: LongWord; PosAck: LongWord; MinDelay: LongWord; MaxDelay: LongWord; ListPos: LongWord): LongInt; stdcall; external RTC6DLL;
procedure send_user_data(Head: LongWord; Axis: LongWord; Data0: LongInt; Data1: LongInt; Data2: LongInt; Data3: LongInt; Data4: LongInt); stdcall; external RTC6DLL;
function  read_user_data(Head: LongWord; Axis: LongWord; var Data0: LongInt; var Data1: LongInt; var Data2: LongInt; var Data3: LongInt; var Data4: LongInt): LongInt; stdcall; external RTC6DLL;
procedure control_command(Head: LongWord; Axis: LongWord; Data: LongWord); stdcall; external RTC6DLL;
function  get_value(Signal: LongWord): LongInt; stdcall; external RTC6DLL;
procedure get_values(SignalPtr: PLongWord; ResultPtr: PLongInt); stdcall; external RTC6DLL;
procedure get_galvo_controls(SignalPtr: PLongInt; ResultPtr: PLongInt); stdcall; external RTC6DLL;
function  get_head_status(Head: LongWord): LongWord; stdcall; external RTC6DLL;
function  set_jump_mode(Flag: LongInt; Length: LongWord; VA1: LongInt; VA2: LongInt; VB1: LongInt; VB2: LongInt; JA1: LongInt; JA2: LongInt; JB1: LongInt; JB2: LongInt): LongInt; stdcall; external RTC6DLL;
function  load_jump_table_offset(Name: PChar; No: LongWord; PosAck: LongWord; Offset: LongInt; MinDelay: LongWord; MaxDelay: LongWord; ListPos: LongWord): LongInt; stdcall; external RTC6DLL;
function  get_jump_table(Ptr: PWord): LongWord; stdcall; external RTC6DLL;
function  set_jump_table(Ptr: PWord): LongWord; stdcall; external RTC6DLL;
function  load_jump_table(Name: PChar; No: LongWord; PosAck: LongWord; MinDelay: LongWord; MaxDelay: LongWord; ListPos: LongWord): LongInt; stdcall; external RTC6DLL;
function  n_get_scanahead_params(CardNo: LongWord; HeadNo: LongWord; var PreViewTime: LongWord; var Vmax: LongWord; var Amax: Double): LongWord; stdcall; external RTC6DLL;
function  n_activate_scanahead_autodelays(CardNo: LongWord; Mode: LongInt): LongInt; stdcall; external RTC6DLL;
procedure n_set_scanahead_laser_shifts(CardNo: LongWord; dLasOn: LongInt; dLasOff: LongInt); stdcall; external RTC6DLL;
procedure n_set_scanahead_line_params(CardNo: LongWord; CornerScale: LongWord; EndScale: LongWord; AccScale: LongWord); stdcall; external RTC6DLL;
procedure n_set_scanahead_line_params_ex(CardNo: LongWord; CornerScale: LongWord; EndScale: LongWord; AccScale: LongWord; JumpScale: LongWord); stdcall; external RTC6DLL;
function  n_set_scanahead_params(CardNo: LongWord; Mode: LongWord; HeadNo: LongWord; TableNo: LongWord; PreViewTime: LongWord; Vmax: LongWord; Amax: Double): LongWord; stdcall; external RTC6DLL;
procedure n_set_scanahead_speed_control(CardNo: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
function  get_scanahead_params(HeadNo: LongWord; var PreViewTime: LongWord; var Vmax: LongWord; var Amax: Double): LongWord; stdcall; external RTC6DLL;
function  activate_scanahead_autodelays(Mode: LongInt): LongInt; stdcall; external RTC6DLL;
procedure set_scanahead_laser_shifts(dLasOn: LongInt; dLasOff: LongInt); stdcall; external RTC6DLL;
procedure set_scanahead_line_params(CornerScale: LongWord; EndScale: LongWord; AccScale: LongWord); stdcall; external RTC6DLL;
procedure set_scanahead_line_params_ex(CornerScale: LongWord; EndScale: LongWord; AccScale: LongWord; JumpScale: LongWord); stdcall; external RTC6DLL;
function  set_scanahead_params(Mode: LongWord; HeadNo: LongWord; TableNo: LongWord; PreViewTime: LongWord; Vmax: LongWord; Amax: Double): LongWord; stdcall; external RTC6DLL;
procedure set_scanahead_speed_control(Mode: LongWord); stdcall; external RTC6DLL;
procedure n_stepper_init(CardNo: LongWord; No: LongWord; Period: LongWord; Dir: LongInt; Pos: LongInt; Tol: LongWord; Enable: LongWord; WaitTime: LongWord); stdcall; external RTC6DLL;
procedure n_stepper_enable(CardNo: LongWord; Enable1: LongInt; Enable2: LongInt); stdcall; external RTC6DLL;
procedure n_stepper_disable_switch(CardNo: LongWord; Disable1: LongInt; Disable2: LongInt); stdcall; external RTC6DLL;
procedure n_stepper_control(CardNo: LongWord; Period1: LongInt; Period2: LongInt); stdcall; external RTC6DLL;
procedure n_stepper_abs_no(CardNo: LongWord; No: LongWord; Pos: LongInt; WaitTime: LongWord); stdcall; external RTC6DLL;
procedure n_stepper_rel_no(CardNo: LongWord; No: LongWord; dPos: LongInt; WaitTime: LongWord); stdcall; external RTC6DLL;
procedure n_stepper_abs(CardNo: LongWord; Pos1: LongInt; Pos2: LongInt; WaitTime: LongWord); stdcall; external RTC6DLL;
procedure n_stepper_rel(CardNo: LongWord; dPos1: LongInt; dPos2: LongInt; WaitTime: LongWord); stdcall; external RTC6DLL;
procedure n_get_stepper_status(CardNo: LongWord; var Status1: LongWord; var Pos1: LongInt; var Status2: LongWord; var Pos2: LongInt); stdcall; external RTC6DLL;
procedure stepper_init(No: LongWord; Period: LongWord; Dir: LongInt; Pos: LongInt; Tol: LongWord; Enable: LongWord; WaitTime: LongWord); stdcall; external RTC6DLL;
procedure stepper_enable(Enable1: LongInt; Enable2: LongInt); stdcall; external RTC6DLL;
procedure stepper_disable_switch(Disable1: LongInt; Disable2: LongInt); stdcall; external RTC6DLL;
procedure stepper_control(Period1: LongInt; Period2: LongInt); stdcall; external RTC6DLL;
procedure stepper_abs_no(No: LongWord; Pos: LongInt; WaitTime: LongWord); stdcall; external RTC6DLL;
procedure stepper_rel_no(No: LongWord; dPos: LongInt; WaitTime: LongWord); stdcall; external RTC6DLL;
procedure stepper_abs(Pos1: LongInt; Pos2: LongInt; WaitTime: LongWord); stdcall; external RTC6DLL;
procedure stepper_rel(dPos1: LongInt; dPos2: LongInt; WaitTime: LongWord); stdcall; external RTC6DLL;
procedure get_stepper_status(var Status1: LongWord; var Pos1: LongInt; var Status2: LongWord; var Pos2: LongInt); stdcall; external RTC6DLL;
procedure n_select_cor_table_list(CardNo: LongWord; HeadA: LongWord; HeadB: LongWord); stdcall; external RTC6DLL;
procedure select_cor_table_list(HeadA: LongWord; HeadB: LongWord); stdcall; external RTC6DLL;
procedure n_list_nop(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_list_continue(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_list_next(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_long_delay(CardNo: LongWord; Delay: LongWord); stdcall; external RTC6DLL;
procedure n_set_end_of_list(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_set_wait(CardNo: LongWord; WaitWord: LongWord); stdcall; external RTC6DLL;
procedure n_list_jump_pos(CardNo: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure n_list_jump_rel(CardNo: LongWord; Pos: LongInt); stdcall; external RTC6DLL;
procedure n_list_repeat(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_list_until(CardNo: LongWord; Number: LongWord); stdcall; external RTC6DLL;
procedure n_range_checking(CardNo: LongWord; HeadNo: LongWord; Mode: LongWord; Data: LongWord); stdcall; external RTC6DLL;
procedure n_store_timestamp_counter_list(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_wait_for_timestamp_counter(CardNo: LongWord; TimeStampCounter: LongWord); stdcall; external RTC6DLL;
procedure n_wait_for_timestamp_counter_mode(CardNo: LongWord; TimeStampCounter: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure n_set_list_jump(CardNo: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure n_wait_for_timestamp_counter_long(CardNo: LongWord; WaitCounterL: LongWord; WaitCounterH: LongWord; MaxWaitTime: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure list_nop(); stdcall; external RTC6DLL;
procedure list_continue(); stdcall; external RTC6DLL;
procedure list_next(); stdcall; external RTC6DLL;
procedure long_delay(Delay: LongWord); stdcall; external RTC6DLL;
procedure set_end_of_list(); stdcall; external RTC6DLL;
procedure set_wait(WaitWord: LongWord); stdcall; external RTC6DLL;
procedure list_jump_pos(Pos: LongWord); stdcall; external RTC6DLL;
procedure list_jump_rel(Pos: LongInt); stdcall; external RTC6DLL;
procedure list_repeat(); stdcall; external RTC6DLL;
